Fix of desktop applets transparency

Fix the transparency of desktop applets when the kwin contrast effect is
enabled on both X11 and Wayland

BUG:473289